	- CORE - Added title/alt to watermark.
	- CORE - Store layout tweaks.
	- CORE - Add support for WordPress 3.4.
	- CORE - Improved Callout section.
	- CORE - Improved Highlight section.
	- CORE - Child theme style.less auto parsed.
	- CORE - Customize plugin style.less auto parsed.
	- CORE - CSS class change - .section-comments to .section-wp-comments
	- Bugs - Fix undefined template name after theme change.
	- Bugs - Remove Custom plugin attempting to copy page templates on every pageload.
	- Bugs - Javascript only loaded when needed.

Version 2.1.7

	- NEW - WPML Added config xml file.
	- NEW - WPML Added pagelines_wpml() wrapper.
	- NEW - Callout/Highlight/Qquickslider all translatable with WPML.
	- Bugs - Features use posts per page if no limit set.
	- Bugs - Only check for updates on admin screens.
	- Bugs - Fix typo under layout options.
	- Bugs - Fix links to pagelines.com in admin.
	- Bugs - Google API use SSL if blog is SSL.
	- CORE - Add three new google fonts to typography.

Version 2.1.6
	
	- CORE - Responsive fixes.
	- CORE - Page titles default to ON.
	- CORE - Fix untranslated strings banners/carousel/boxes.
	- CORE - Default font changed to helvetica.
	- Bugs - Fix featured thumb in posts.
	- Bugs - Various CSS fixes.
	- Bugs - Strip HTML from shares.

Version 2.1.5
	- HotFix - Metapanel integrations error.

Version 2.1.4
	- NEW - PInterest added to sharebar.
	- NEW - Section QuickSlider.
	- NEW - Footer Image/Watermark fully configurable.
	- CORE - Subscriptions added to store.
	- CORE - Add compatibility for wp 3.4
	- Bugs - Shortcodes work in features.
	- Bugs - CPT handling.
	- Bugs - bbpress/og conflict.

Version 2.1.3
	- Bugs - HotFix - Static Height Mode - Feature Slider

Version 2.1.2
	- NEW - Callout Options (alignment, CSS button)
	- NEW - Facebook Like Image uses 'Featured Image' (if available)
	- NEW - Advanced option - Current Install <body> class
	- NEW - Boxes options - More link & individual class
	- NEW - Add Open Graph options